--- a/src/components/OurTeam/OurTeam.css
+++ b/src/components/OurTeam/OurTeam.css
@@ -32,7 +32,7 @@
   font-size: 1.875rem;
   font-weight: bold;
   letter-spacing: -0.025em;
-  margin-top: 0;
+  margin-top: 25px;
   margin-bottom: 1rem;
 }
 
